# edblock

./: .gitignore  Cargo.toml  README.md
edblock/: Cargo.toml
edblock/src/: blockchain.rs  generate_key.rs  lib.rs  main.rs  rust_template.rs  utils.rs
edblock/src/blockchain/: blockchain_app.rs  blockchain_core.rs  blockchain_rest.rs  blockchain_tui.rs  peer_network.rs  wallet.rs
edblock/src/blockchain/blockchain_rest/: rest_api.rs
edblock/src/explorer/: explorer.rs
edblock/src/rust_template/: certificate_template.rs  key_generator_template.rs
student-ui/: Cargo.toml  tauri.conf.json
student-ui/frontend/user-ui/src/: App.svelte
student-ui/frontend/user-ui/src/components/: CertDetails.svelte  CertificateStatus.svelte  CreateUploadForm.svelte  Footer.svelte  Header.svelte  UploadStatus.svelte
student-ui/frontend/user-ui/src/shared/: Tabs.svelte
student-ui/src/: api.rs  main.rs
university-ui/: Cargo.toml  tauri.conf.json
university-ui/frontend/user-ui/src/: App.svelte
university-ui/frontend/user-ui/src/components/: CertDetails.svelte  CertificateStatus.svelte  ShowAddress.svelte
university-ui/src/: api.rs  main.rs
vendor-ui/: Cargo.toml  tauri.conf.json
vendor-ui/frontend/user-ui/src/: App.svelte
vendor-ui/frontend/user-ui/src/components/: CertDetails.svelte  CertificateStatus.svelte  UrlBox.svelte
vendor-ui/src/: main.rs
