[package]
name = "edblock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "expl"
path = "src/explorer/explorer.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
rocksdb = "0.22.0"
tokio  =  {version = "1.39.3", features = ["full"]}
axum = {version = "0.7.5"}
zip = {version = "2.2.0"}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = {version = "0.5"}
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
rsa = {version = "0.9.6", features = ["sha2"]}
local-ip-address = "0.6.2"
chrono = "0.4.38"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
rand = "0.8.5"
base58 = "0.2.0"
ripemd = "0.1.3"
urlencoding = "2.1.3"
pem = "3.0.4"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # lets you generate random uuids
    "fast-rng",          # use a faster (but still sufficiently random) rng
    "macro-diagnostics", # enable better diagnostics for compile-time uuids
]