[package]
name = "edblock-student"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "edblock-student"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tokio  =  {version = "1.39.3", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [] }
edblock = {path = "../edblock"}
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
rsa = {version = "0.9.6", features = ["sha2"]}
rand = "0.8.5"
secp256k1 = {version = "0.29.1", features = ["rand", "hashes"]}

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # lets you generate random uuids
    "fast-rng",          # use a faster (but still sufficiently random) rng
    "macro-diagnostics", # enable better diagnostics for compile-time uuids
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
